src/frontend/static/style.css
html, body {
  margin: 0;
  padding: 0;
  font-family: Ubuntu, Nimbus Sans L, sans;
  background: #7FDBFF;
  color:  #001f3f;
}

h1 {
  font-family: Palatino;
  font-size: 2.5em;
  text-align: center;
  margin: 40px auto;
}

select {
  width: 300px;
  max-width: 100%;
  background: #7FDBFF;
  color:  #001f3f;
  border: 2px solid  #001f3f;
}

table {
  margin: 20px auto;
  width: 100%;
  max-width: 500px;
  border: 1px solid grey;
  border-collapse: collapse;
}

thead {
  background: #001f3f;
  color:  #7FDBFF;
}

th:first-child {
  width: 800px;
}

pre {
  background:  #85144b;
  color: #F012BE;
  padding: 10px;
  overflow: auto;
  white-space: pre-wrap;
  width: 100%;
}

